CFD-1: refactoring: moved client related methods to RestClientUtil lib

--- a/arduino-lib/pom.xml
+++ b/arduino-lib/pom.xml
@@ -7,8 +7,8 @@
     <artifactId>cat-food-dispenser</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
-   
 
-    <name>dispenser-api</name>
+    <name>dispenser-arduino-lib</name>
 
+    
 </project>
